@@ -1062,19 +1062,26 @@ begin
     end if;
   end if;
 
-  -- KB: 22/01/17 - re-enabled this because this pretains to built-in
-  -- functions, rather than user functions.  Original message:
+  -- If the variable already exists, it is written because it is updated.
+  -- If it is auto-declared, then it is not written because it may be
+  -- created but still needs to be used.
+  --
   -- For an out parameter, we do not mark it as written to as we would with
   -- an in-out parameter because we want to treat not giving it a value as
   -- an error.
-  --
-  if syntax_check and then not error_found then
-     if identifiers( ref.id ).field_of /= eof_t then
-        identifiers( identifiers( ref.id ).field_of ).wasWritten := true;
-     else
-        identifiers( ref.id ).wasWritten := true;
+
+  if not isNew then
+     if syntax_check and then not error_found then
+        if identifiers( ref.id ).field_of /= eof_t then
+           identifiers( identifiers( ref.id ).field_of ).wasWritten := true;
+           identifiers( identifiers( ref.id ).field_of ).writtenByThread := getThreadName;
+        else
+           identifiers( ref.id ).wasWritten := true;
+           identifiers( ref.id ).writtenByThread := getThreadName;
+        end if;
      end if;
   end if;
+
   if isExecutingCommand then
      checkExpressionFactorVolatilityOnWrite(ref.id );
      checkDoubleThreadWrite( ref.id );
